# arche

./: .gitignore  Cargo.toml  README.ja.md  README.md  Trunk.toml  architecture.md  candid-extract.sh  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.candid/: backend.did
crates/backend/: Cargo.toml
crates/backend/src/: article.rs  entry_point.rs  infrastructure.rs  init.rs  lib.rs  log.rs  post.rs  use_case.rs  user.rs
crates/backend/src/controller/: article.rs  paper.rs  user.rs
crates/backend/src/controller/article/: query.rs  update.rs
crates/backend/src/controller/paper/: query.rs  update.rs
crates/backend/src/controller/user/: query.rs  update.rs
crates/backend/src/entry_point/: article.rs  guards.rs  paper.rs  user.rs
crates/backend/src/infrastructure/: memory.rs
crates/backend/src/infrastructure/article/: repository.rs
crates/backend/src/infrastructure/paper/: repository.rs
crates/backend/src/infrastructure/user/: repository.rs
crates/backend/src/use_case/: paper.rs  user.rs
crates/common/: Cargo.toml
crates/common/src/: article.rs  lib.rs  post.rs  user.rs  util.rs
crates/common/src/article/: id.rs  key.rs  title.rs
crates/common/src/post/: id.rs  key.rs  title.rs
crates/common/src/user/: id.rs  principal.rs
crates/common/src/util/: canister_id.rs  dfx_network.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/article/: repository.rs  service.rs  value_object.rs
crates/domain/src/article/entity/: dao.rs  dto.rs  model.rs
crates/domain/src/article/entity/dao/: v1.rs
crates/domain/src/article/value_object/: category.rs  citation.rs  id.rs  status.rs
crates/domain/src/paper/: entity.rs  repository.rs  service.rs  value_object.rs
crates/domain/src/paper/entity/: dao.rs  dto.rs  model.rs
crates/domain/src/paper/entity/dao/: v1.rs
crates/domain/src/paper/value_object/: category.rs  citation.rs  content.rs  id.rs  status.rs  summary.rs  title.rs
crates/domain/src/user/: repository.rs  service.rs  value_object.rs
crates/domain/src/user/entity/: dao.rs  dto.rs  model.rs
crates/domain/src/user/entity/dao/: v1.rs
crates/domain/src/user/value_object/: id.rs  name.rs  primary_key.rs  principal.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: app.rs  main.rs
crates/frontend/src/app/: fallback.rs  home.rs
crates/frontend/src/app/article/: mod.rs
crates/frontend/src/app/author/: mod.rs  post_list.rs
crates/frontend/src/app/user/: article_list.rs  mod.rs
crates/frontend/src/context/: auth_client.rs  service.rs
crates/frontend/src/features/: article.rs  user.rs
crates/frontend/style/: input.css  output.css
crates/interface/: Cargo.toml
crates/interface-derive/: Cargo.toml
crates/interface-derive/src/: lib.rs
crates/interface-traits/: Cargo.toml
crates/interface-traits/src/: lib.rs  request.rs  response.rs
crates/interface/src/: article.rs  get_post.rs  lib.rs  paper.rs  user.rs
crates/interface/src/user/: register_user.rs
crates/util/: Cargo.toml
crates/util/src/: call_type.rs  canister_id.rs  dfx_network.rs  lib.rs  time.rs
frontend/: index.html
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: header.tsx  loadingIndicator.tsx  login.tsx
frontend/src/components/header/: account.tsx
frontend/src/contexts/: alert.tsx  auth.tsx
frontend/src/contexts/alert/: error.tsx  info.tsx  success.tsx  warning.tsx
frontend/src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
frontend/src/features/account/: index.ts  types.ts
frontend/src/features/paper/: content.ts  content.tsx  encode.tsx  index.ts
frontend/src/features/paper/content/: plaintext.tsx
frontend/src/features/paper/content/source/: http.tsx  raw.tsx
frontend/src/routes/: __root.tsx  about.tsx  index.tsx  papers.tsx
frontend/src/routes/abs/: $paperId.tsx
frontend/src/routes/account/: edit.tsx  paper-list.tsx  settings.tsx
frontend/src/routes/article/: $articleId.tsx
frontend/src/routes/user/: $userId.tsx
frontend/src/routes/users/: $userId.tsx
frontend/src/utils/: matchOption.ts  matchResult.ts
