[package]
publish = false
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true, features = ["ic-stable"] }
interface.workspace = true

anyhow.workspace = true
candid.workspace = true
futures = "0.3.31"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.7"
serde.workspace = true
