[package]
publish = false
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
domain = { workspace = true, features = ["canister", "entity", "ic-stable"] }
interface.workspace = true
util = { workspace = true, features = ["canister"] }

anyhow.workspace = true
candid.workspace = true
chrono = { version = "0.4.40", default-features = false, features = ["alloc", "std"] }
ciborium = "0.2.2"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.7"
no-panic = "0.1"
serde.workspace = true
