[package]
publish = false
name = "common"
version = "0.0.1"
edition = "2021"

[dependencies]
candid.workspace = true
derive_more = { version = "2", features = [
    "as_ref",
    "display",
    "from",
    "into",
] }
dotenvy_macro = "0.15.7"
hexaurl.workspace = true
ic-cdk = { version = "0.17.1", optional = true }
ic-stable-structures = { workspace = true, optional = true }
serde.workspace = true
thiserror = "2.0.11"
wasm-timer = { version = "0.2.5", optional = true }

[features]
default = []
ic-stable = ["hexaurl/ic-stable", "ic-stable-structures"]
canister = ["ic-cdk"]
wasm-js = ["wasm-timer"]
