[package]
publish = false
name = "frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
domain.workspace = true
interface.workspace = true
util = { workspace = true, features = ["wasm-js"] }

anyhow.workspace = true
candid.workspace = true
console_error_panic_hook = "0.1.7"
ic-agent = { version = "0.39.3", features = ["wasm-bindgen"] }
ic-auth-client = "0.3.1"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_meta = "0.7.7"
leptos_router = "0.7.7"
leptos_router_macro = "0.7.7"
reactive_stores = "0.1.7"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
