[package]
publish = false
name = "util"
version = "0.0.1"
edition = "2021"

[dependencies]
candid.workspace = true
dotenvy_macro = "0.15.7"
ic-cdk = { version = "0.17.1", optional = true }
wasm-timer = { version = "0.2.5", optional = true }

[features]
default = []
canister = ["ic-cdk"]
wasm-js = ["wasm-timer"]
